--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         .animated-gradient {
             background: linear-gradient(-45deg, #541C1C, #6B2E2E, #874C1B, #541C1C);
             background-size: 600% 600%; /* Increased size for smoother movement */
-            animation: waveFlag 0.1s ease infinite; /* New animation */
+            animation: waveFlag 10s ease infinite; /* New animation */
         }
 
         @keyframes waveFlag {
@@ -210,15 +210,15 @@
             <div class="fade-in-up-5">
                 <p class="mb-4 text-gray-300">Watch Live On</p>
                 <div class="flex flex-wrap justify-center items-center gap-4">
-                    <a href="update.html" target="_self" class="glow-button flex items-center gap-2 btn-zoom text-white font-bold py-2 px-5 rounded-full">
+                    <a href="update.html" target="_blank" class="glow-button flex items-center gap-2 btn-zoom text-white font-bold py-2 px-5 rounded-full">
                         <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24"><path d="M17.582 5.418c.98-.98 2.56-1.042 3.418-.184l.184.184c.98.98.918 2.56-.184 3.418l-1.816 1.816-3.234-3.234 1.632-1.632zM16.58 4.42l-9.898 9.898-3.264 1.26c-.48.186-.882-.216-.696-.696l1.26-3.264L14.18 1.42a2.402 2.402 0 013.4 0l-1 1zm-2 2L4.42 16.58 3 21l4.42-1.42L17.58 9.42l-3.16-3z"/></svg>
                         Zoom
                     </a>
-                    <a href="update.html" target="_self" class="glow-button flex items-center gap-2 btn-youtube text-white font-bold py-2 px-5 rounded-full">
+                    <a href="update.html" target="_blank" class="glow-button flex items-center gap-2 btn-youtube text-white font-bold py-2 px-5 rounded-full">
                         <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24"><path d="M21.582,6.186c-0.23-0.86-0.908-1.538-1.768-1.768C18.254,4,12,4,12,4S5.746,4,4.186,4.418 C3.326,4.648,2.648,5.326,2.418,6.186C2,7.746,2,12,2,12s0,4.254,0.418,5.814c0.23,0.86,0.908,1.538,1.768,1.768 C5.746,20,12,20,12,20s6.254,0,7.814-0.418c0.86-0.23,1.538-0.908,1.768-1.768C22,16.254,22,12,22,12S22,7.746,21.582,6.186z M10,15.464V8.536L16,12L10,15.464z"/></svg>
                         YouTube
                     </a>
-                    <a href="update.html" target="_self" class="glow-button flex items-center gap-2 btn-facebook text-white font-bold py-2 px-5 rounded-full">
+                    <a href="update.html" target="_blank" class="glow-button flex items-center gap-2 btn-facebook text-white font-bold py-2 px-5 rounded-full">
                         <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24"><path d="M22,12c0-5.52-4.48-10-10-10S2,6.48,2,12c0,4.84,3.44,8.87,8,9.8V15H8v-3h2V9.5C10,7.57,11.57,6,13.5,6H16v3h-1.5 c-0.83,0-1,0.47-1,1v2h2.5l-0.5,3H13v6.95C18.05,21.45,22,17.2,22,12z"/></svg>
                         Facebook
                     </a>
