--- a/index.html
+++ b/index.html
@@ -239,7 +239,8 @@
             </div>
         </div>
     </footer>
-
+    <!-- Interactive Canvas -->
+    <canvas id="interactiveCanvas" class="fixed top-0 left-0 w-full h-full pointer-events-none z-0"></canvas>
     <script>
         // --- SCRIPT FOR LOADER ---
         window.addEventListener('load', () => {
@@ -277,6 +278,93 @@
                 countdownContainer.innerHTML = '<h2 class="col-span-2 sm:col-span-4 text-3xl font-bold" style="color: #F28C1A;">The Event is LIVE!</h2>';
             }
         }, 1000);
+         // Interactive Canvas
+        const canvas = document.getElementById("interactiveCanvas");
+        const ctx = canvas.getContext("2d");
+        let particles = [];
+        let mouse = { x: 0, y: 0 };
+        function resizeCanvas() {
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight;
+        }
+        function createParticle(x, y) {
+            return {
+                x: x,
+                y: y,
+                vx: (Math.random() - 0.5) * 2,
+                vy: (Math.random() - 0.5) * 2,
+                size: Math.random() * 5 + 2,
+                color: `hsl(${Math.random() * 60 + 20}, 70%, 60%)`,
+                life: 1,
+                decay: Math.random() * 0.02 + 0.005,
+            };
+        }
+        function updateParticles() {
+            for (let i = particles.length - 1; i >= 0; i--) {
+                const particle = particles[i];
+                particle.x += particle.vx;
+                particle.y += particle.vy;
+                particle.life -= particle.decay;
+                particle.size *= 0.98;
+                if (particle.life <= 0 || particle.size <= 0.5) {
+                    particles.splice(i, 1);
+                }
+            }
+        }
+        function drawParticles() {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            particles.forEach((particle) => {
+                ctx.save();
+                ctx.globalAlpha = particle.life;
+                ctx.fillStyle = particle.color;
+                ctx.beginPath();
+                ctx.arc(particle.x, particle.y, particle.size, 0, Math.PI * 2);
+                ctx.fill();
+                ctx.shadowBlur = 20;
+                ctx.shadowColor = particle.color;
+                ctx.fill();
+                ctx.restore();
+            });
+        }
+        function animate() {
+            updateParticles();
+            drawParticles();
+            requestAnimationFrame(animate);
+        }
+        canvas.addEventListener("mousemove", (e) => {
+            mouse.x = e.clientX;
+            mouse.y = e.clientY;
+            if (Math.random() > 0.7) {
+                particles.push(createParticle(mouse.x, mouse.y));
+            }
+        });
+        canvas.addEventListener("click", (e) => {
+            for (let i = 0; i < 15; i++) {
+                particles.push(createParticle(e.clientX, e.clientY));
+            }
+        });
+        window.addEventListener("resize", resizeCanvas);
+        setInterval(() => {
+            if (particles.length < 50) {
+                particles.push(
+                    createParticle(
+                        Math.random() * canvas.width,
+                        Math.random() * canvas.height
+                    )
+                );
+            }
+        }, 200);
+        // Initialize
+        resizeCanvas();
+        animate();
+        for (let i = 0; i < 20; i++) {
+            particles.push(
+                createParticle(
+                    Math.random() * window.innerWidth,
+                    Math.random() * window.innerHeight
+                )
+            );
+        }
     </script>
 </body>
 </html>
