--- a/update.html
+++ b/update.html
@@ -23,7 +23,7 @@
         .animated-gradient {
             background: linear-gradient(-45deg, #541C1C, #6B2E2E, #874C1B, #541C1C);
             background-size: 600% 600%;
-            animation: waveFlag 0.1s ease infinite;
+            animation: waveFlag 20s ease infinite;
         }
 
         @keyframes waveFlag {
@@ -39,7 +39,7 @@
         }
 
         .fade-in {
-            animation: fadeIn 10s ease-out forwards;
+            animation: fadeIn 1s ease-out forwards;
         }
         
         /* Glow effect for the button */
@@ -62,7 +62,7 @@
 
             <!-- Logo -->
             <div class="mb-8">
-                 <img src="img/logo2.jpg" alt="Site Logo" class="h-24 w-24 rounded-full object-cover border-4 border-orange-400 p-1">
+                 <img src="http://googleusercontent.com/file_content/0" alt="Site Logo" class="h-24 w-24 rounded-full object-cover border-4 border-orange-400 p-1">
             </div>
 
             <!-- Message -->
