--- a/index.html
+++ b/index.html
@@ -105,10 +105,12 @@
 
         /* Header Styles */
         .site-header {
+            margin: 1%;
+            border-radius: 1rem;
             position: fixed;
             top: 0;
             left: 0;
-            width: 100%;
+            width: 98%;
             z-index: 1000;
             background-color: rgba(84, 28, 28, 0.5); /* Semi-transparent dark brown */
             backdrop-filter: blur(10px);
