--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             <h1 class="text-5xl sm:text-6xl md:text-7xl lg:text-8xl font-black uppercase tracking-wider fade-in-up-2" style="text-shadow: 0 4px 15px rgba(0,0,0,0.3);">
                 INSPIRA <span style="color: #F28C1A;">2025</span>
             </h1>
-            <p class="text-xl sm:text-2xl font-semibold mt-2 text-gray-300 fade-in-up-3">The Talent Show</p>
+            <p class="text-xl sm:text-2xl font-semibold mt-2 text-gray-300 fade-in-up-3">Born to Perform, Inspired to Shine</p>
             
             <div class="mt-4 text-sm sm:text-base text-gray-400 fade-in-up-4">
                 <p>Organized by the English Speech Club 23/24</p>
