--- a/index.html
+++ b/index.html
@@ -212,15 +212,15 @@
            <div class="fade-in-up-5">
                 <p class="mb-4 text-gray-300">Watch Live On</p>
                 <div class="flex flex-wrap justify-center items-center gap-4">
-                    <a href="update.html" target="_blank" class="glow-button flex items-center gap-2 btn-zoom text-white font-bold py-2 px-5 rounded-full">
+                    <a href="update.html" target="_self" class="glow-button flex items-center gap-2 btn-zoom text-white font-bold py-2 px-5 rounded-full">
                         <i class="bi bi-camera-video-fill"></i>
                         Zoom
                     </a>
-                    <a href="update.html" target="_blank" class="glow-button flex items-center gap-2 btn-youtube text-white font-bold py-2 px-5 rounded-full">
+                    <a href="update.html" target="_self" class="glow-button flex items-center gap-2 btn-youtube text-white font-bold py-2 px-5 rounded-full">
                         <i class="bi bi-youtube"></i>
                         YouTube
                     </a>
-                    <a href="update.html" target="_blank" class="glow-button flex items-center gap-2 btn-facebook text-white font-bold py-2 px-5 rounded-full">
+                    <a href="update.html" target="_self" class="glow-button flex items-center gap-2 btn-facebook text-white font-bold py-2 px-5 rounded-full">
                         <i class="bi bi-facebook"></i>
                         Facebook
                     </a>
