--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>INSPIRA 2025 - The Talent Show</title>
     
     <script src="https://cdn.tailwindcss.com"></script>
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;900&display=swap" rel="stylesheet">
- <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
     <style>
         /* Using the Poppins font family */
@@ -168,8 +168,8 @@
             </a>
             <nav>
                 <ul class="flex items-center space-x-8">
-                    <li><a href="#" class="nav-link font-semibold">Home</a></li>
-                    <li><a href="update.html" class="nav-link font-semibold">About Us</a></li>
+                    <li><a href="index.html" class="nav-link font-semibold">Home</a></li>
+                    <li><a href="about.html" class="nav-link font-semibold">About Us</a></li>
                 </ul>
             </nav>
         </div>
