--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
+    <link rel="icon" href="img/logo.jpg" type="image/x-icon">
     <style>
         /* Using the Poppins font family */
         body {
@@ -240,7 +241,6 @@
             </a>
             <nav>
                 <ul class="flex items-center space-x-8">
-                    <li><a href="index.html" class="nav-link font-semibold">Home</a></li>
                     <li><a href="about.html" class="nav-link font-semibold">About Us</a></li>
                 </ul>
             </nav>
