Add Home link to navigation menus
Added a Home link to the navigation menus in both about.html and index.html for improved site navigation and consistency.

--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
             </a>
             <nav>
                 <ul class="flex items-center space-x-8">
+                    <li><a href="index.html" class="nav-link font-semibold">Home</a></li>
                     <li><a href="about.html" class="nav-link font-semibold">About Us</a></li>
                 </ul>
             </nav>
