--- a/about.html
+++ b/about.html
@@ -212,6 +212,7 @@
             <nav>
                 <ul class="flex items-center space-x-8">
                     <li><a href="index.html" class="nav-link font-semibold">Home</a></li>
+                    <li><a href="about.html" class="nav-link font-semibold">About</a></li>
                 </ul>
             </nav>
         </div>
