Add developers page and update footer links
Created developers.html to showcase the developer team. Updated the copyright footer in about.html and index.html to link to the new developers page.

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
             </p>
             <p>Phone: <a href="tel:+94000000000" class="hover:text-orange-400">+94 (00) 000-0000</a></p>
             <div class="mt-6 border-t border-gray-700 pt-6">
-                <p>&copy; 2025 INSPIRA. All Rights Reserved.</p>
+                <p>&copy; 2025 <a href="developers.html"> INSPIRA </a>. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
