--- a/about.html
+++ b/about.html
@@ -356,8 +356,8 @@
             <p class="mb-2">Faculty of Applied Science, Rajarata University of Sri Lanka, Mihintale</p>
             <p class="mb-2">Email: <a href="mailto:info@inspira.com" class="hover:text-orange-400">info@inspira.com</a></p>
             <p>Phone: <a href="tel:+94000000000" class="hover:text-orange-400">+94 (00) 000-0000</a></p>
-            <div class="mt-6 border-t border-gray-700 pt-6">
-                <p>&copy; 2025 INSPIRA. All Rights Reserved.</p>
+             <div class="mt-6 border-t border-gray-700 pt-6">
+                <p>&copy; 2025 <a href="developers.html"> INSPIRA </a>. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
