--- a/developers.html
+++ b/developers.html
@@ -137,7 +137,7 @@
 
     <header class="site-header">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="#" class="flex items-center gap-3">
+            <a href="index.html" class="flex items-center gap-3">
                 <img src="img/logo2.jpg" class="logo-img h-12 w-12 rounded-full object-cover border-2 border-orange-400 p-1" alt="INSPIRA Logo">
                 <span class="logo-text hidden sm:block">INSPIRA 2025</span>
             </a>
