--- a/about.html
+++ b/about.html
@@ -231,7 +231,7 @@
                 </div>
                 <div class="col-lg-6 mt-5 mt-lg-0">
                     <div class="ratio ratio-16x9">
-                        <img src="https://placehold.co/800x450" alt="Attentive audience at a conference hall with people listening to a keynote speaker on stage" class="rounded-3 shadow-lg">
+                        <iframe src="https://www.youtube.com/embed/2VAp-FvQ9as" width="800" height="450" allowfullscreen frameborder="0"></iframe>
                     </div>
                 </div>
             </div>
