--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         .site-header {
             margin: 1%;
             border-radius: 2rem;
-            /* position: fixed; */
+            position: fixed;
             top: 0;
             left: 0;
             width: 98%;
