--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
         /* Page content wrapper to prevent content from hiding behind fixed header */
         #page-content {
-            padding-top: 120px;
+            padding-top: 20%;
             /* Adjust based on header height */
             padding-bottom: 100px;
             /* Adjust based on footer height */
