--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
 
         /* Page content wrapper to prevent content from hiding behind fixed header */
         #page-content {
+            margin-top: 10%;
             padding-top: 20%;
             /* Adjust based on header height */
             padding-bottom: 100px;
