Add developer team Link

--- a/index.html
+++ b/index.html
@@ -291,7 +291,6 @@
             </div>
 <h1 class="text-4xl sm:text-6xl md:text-7xl lg:text-8xl font-black uppercase tracking-wider fade-in-up-2 
                 mt-12 mb-12">
-                Stay Tuned!!
             </h1>
             <div class="fade-in-up-5">
                 <p class="mb-4 text-gray-300">Watch Live On</p>
@@ -326,7 +325,8 @@
             </p>
             <p>Phone: <a href="tel:+94000000000" class="hover:text-orange-400">+94 (00) 000-0000</a></p>
             <div class="mt-6 border-t border-gray-700 pt-6">
-                <p>&copy; 2025 <a href="developers.html"> INSPIRA </a>. All Rights Reserved.</p>
+            <p>&copy; inspira'25. All Rights Reserved.</p>
+            <p><a href="developers.html"> Developer Team </a></p>
             </div>
         </div>
     </footer>
