Add 'Stay Tuned!' heading to homepage
Inserted a new 'Stay Tuned!' h1 element with custom styling and text shadow above the main heading to enhance the homepage announcement.

--- a/index.html
+++ b/index.html
@@ -292,6 +292,11 @@
             </div>
 <h1 class="text-4xl sm:text-6xl md:text-7xl lg:text-8xl font-black uppercase tracking-wider fade-in-up-2 
                 mt-12 mb-12">
+
+                 <h1 class="text-5xl sm:text-6xl md:text-7xl lg:text-8xl font-black uppercase tracking-wider fade-in-up-2"
+                style="text-shadow: 0 4px 15px rgba(0,0,0,0.3);">
+                Stay Tuned!
+            </h1>
             </h1>
             <div class="fade-in-up-5">
                 <p class="mb-4 text-gray-300">Watch Live On</p>
