--- a/developers.html
+++ b/developers.html
@@ -246,8 +246,7 @@
             <p class="mb-2">Email: <a href="mailto:info@inspira.com" class="hover:text-orange-400">info@inspira.com</a></p>
             <p>Phone: <a href="tel:+94000000000" class="hover:text-orange-400">+94 (00) 000-0000</a></p>
             <div class="mt-6 border-t border-gray-700 pt-6">
-                <p>&copy; 2025 INSPIRA. All Rights Reserved.</p>
-            </div>
+            <p>Develope By <a href="developers.html">  Team INSPIRA </a></p>            </div>
         </div>
     </footer>
 
