--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
             <p>Phone: <a href="tel:+94000000000" class="hover:text-orange-400">+94 (00) 000-0000</a></p>
             <div class="mt-6 border-t border-gray-700 pt-6">
             <p>&copy; inspira'25. All Rights Reserved.</p>
-            <p><a href="developers.html"> Developer Team </a></p>
+            <p>Develope By <a href="developers.html">  Team INSPIRA </a></p>
             </div>
         </div>
     </footer>
