adding margin with medea query

--- a/index.html
+++ b/index.html
@@ -230,6 +230,12 @@
             padding-bottom: 100px;
             /* Adjust based on footer height */
         }
+        @media (max-width: 768px) {
+          #page-content {
+            margin-top: 10vh; /* or 10% depending on your need */
+          }
+        }
+
     </style>
 </head>
 
