--- a/index.html
+++ b/index.html
@@ -230,6 +230,13 @@
             padding-bottom: 100px;
             /* Adjust based on footer height */
         }
+
+        @media (max-width: 768px) {
+          #page-content {
+            margin-top: 20vh; /* or 10% depending on your need */
+          }
+        }
+
     </style>
 </head>
 
