--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
         @media (max-width: 768px) {
           #page-content {
-            margin-top: 20vh; /* or 10% depending on your need */
+            margin-top: 20%; /* or 10% depending on your need */
           }
         }
 
