--- a/developers.html
+++ b/developers.html
@@ -207,7 +207,7 @@
                     </div>
                 </div>
             </div>
-                        <div class="col-md-3 col-sm-6">
+            <!--<div class="col-md-3 col-sm-6">
                 <div class="team-card text-center">
                     <img src="" alt="John Doe">
                     <h5 class="fw-bold">John Doe</h5>
@@ -221,7 +221,7 @@
                     </div>
                 </div>
             </div>
-                        <div class="col-md-3 col-sm-6">
+            <div class="col-md-3 col-sm-6">
                 <div class="team-card text-center">
                     <img src="" alt="John Doe">
                     <h5 class="fw-bold">John Doe</h5>
@@ -234,7 +234,7 @@
                         <a href="#"><i class="bi bi-envelope"></i></a>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
 
@@ -246,7 +246,7 @@
             <p class="mb-2">Email: <a href="mailto:info@inspira.com" class="hover:text-orange-400">info@inspira.com</a></p>
             <p>Phone: <a href="tel:+94000000000" class="hover:text-orange-400">+94 (00) 000-0000</a></p>
             <div class="mt-6 border-t border-gray-700 pt-6">
-            <p>Develope By <a href="developers.html">  Team INSPIRA </a></p>            </div>
+            <p>Developed By <a href="developers.html">  Team INSPIRA </a></p>            </div>
         </div>
     </footer>
 
