watch trailer update

--- a/index.html
+++ b/index.html
@@ -307,21 +307,21 @@
             <div class="fade-in-up-5">
                 <p class="mb-4 text-gray-300">Watch Live On</p>
                 <div class="flex flex-wrap justify-center items-center gap-4">
-                    <a href="update.html" target="_self"
+                    <!--<a href="update.html" target="_self"
                         class="glow-button flex items-center gap-2 btn-zoom text-white font-bold py-2 px-5 rounded-full">
                         <i class="bi bi-camera-video-fill"></i>
                         Zoom
-                    </a>
-                    <a href="update.html" target="_self"
+                    </a> -->
+                    <a href="https://youtu.be/2VAp-FvQ9as" target="_blank"
                         class="glow-button flex items-center gap-2 btn-youtube text-white font-bold py-2 px-5 rounded-full">
                         <i class="bi bi-youtube"></i>
-                        YouTube
+                        Watch Trailer On YouTube 
                     </a>
-                    <a href="update.html" target="_self"
+                    <!--<a href="update.html" target="_self"
                         class="glow-button flex items-center gap-2 btn-facebook text-white font-bold py-2 px-5 rounded-full">
                         <i class="bi bi-facebook"></i>
                         Facebook
-                    </a>
+                    </a> -->
                 </div>
             </div>
             
@@ -332,13 +332,13 @@
     <footer class="site-footer text-gray-300 py-12">
         <div class="container mx-auto px-6 text-center">
             <h3 class="text-2xl font-bold mb-4 text-white">Contact Us</h3>
-            <p class="mb-2">Faculty of Applied Science, Rajarata University of Sri Lanka, Mihintale</p>
+            <p class="mb-2">Organizing Comiitee,INSPIRA'25</p>
             <p class="mb-2">Email: <a href="mailto:info@inspira.com" class="hover:text-orange-400">info@inspira.com</a>
             </p>
             <p>Phone: <a href="tel:+94000000000" class="hover:text-orange-400">+94 (00) 000-0000</a></p>
             <div class="mt-6 border-t border-gray-700 pt-6">
             <p>&copy; inspira'25. All Rights Reserved.</p>
-            <p>Develope By <a href="developers.html">  Team INSPIRA </a></p>
+            <p>Developed By <a href="developers.html">  Team INSPIRA </a></p>
             </div>
         </div>
     </footer>
