remove watch live on

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
             </h1>
             
             <div class="fade-in-up-5">
-                <p class="mb-4 text-gray-300">Watch Live On</p>
+                <!--<p class="mb-4 text-gray-300">Watch Live On</p> -->
                 <div class="flex flex-wrap justify-center items-center gap-4">
                     <!--<a href="update.html" target="_self"
                         class="glow-button flex items-center gap-2 btn-zoom text-white font-bold py-2 px-5 rounded-full">
