--- a/index.html
+++ b/index.html
@@ -332,13 +332,20 @@
     <footer class="site-footer text-gray-300 py-12">
         <div class="container mx-auto px-6 text-center">
             <h3 class="text-2xl font-bold mb-4 text-white">Contact Us</h3>
-            <p class="mb-2">Organizing Comiitee,INSPIRA'25</p>
+            <p class="mb-2">Organizing Comiitee, INSPIRA'25</p>
             <p class="mb-2">Email: <a href="mailto:info@inspira.com" class="hover:text-orange-400">info@inspira.com</a>
             </p>
             <p>Phone: <a href="tel:+94000000000" class="hover:text-orange-400">+94 (00) 000-0000</a></p>
             <div class="mt-6 border-t border-gray-700 pt-6">
             <p>&copy; inspira'25. All Rights Reserved.</p>
-            <p>Developed By <a href="developers.html">  Team INSPIRA </a></p>
+<p>
+    <small>
+        Developed By
+        <a href="developers.html" style="text-decoration: underline; color: yellow;">
+             Team INSPIRA
+        </a>
+    </small>
+</p>
             </div>
         </div>
     </footer>
