Refactor footer and header elements for improved styling and clarity

--- a/developers.html
+++ b/developers.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Developer Team - EduWide</title>
+    <title>Developer Team</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
  <script src="https://cdn.tailwindcss.com"></script>
@@ -138,9 +138,15 @@
     <header class="site-header">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="index.html" class="flex items-center gap-3">
-                <img src="img/logo2.jpg" class="logo-img h-12 w-12 rounded-full object-cover border-2 border-orange-400 p-1" alt="INSPIRA Logo">
-                <span class="logo-text hidden sm:block">INSPIRA 2025</span>
+                <img src="img/logo2.jpg" class="h-12 w-12 rounded-full object-cover border-2 border-orange-400 p-1">
+                <span class="font-bold text-xl hidden sm:block">INSPIRA 2025</span>
             </a>
+            <nav>
+                <ul class="flex items-center space-x-8">
+                    <li><a href="index.html" class="nav-link font-semibold">Home</a></li>
+                    <li><a href="about.html" class="nav-link font-semibold">About</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
     <!-- Team Section -->
@@ -248,7 +254,7 @@
             <p>Phone: <a href="tel:+94000000000" class="hover:text-orange-400">+94 (72) 768-8334 (Event Cordinator)</a></p>
             <div class="mt-6 border-t border-gray-700 pt-6">
             <p>&copy; inspira'25. All Rights Reserved.</p>
-            <p>Developed By <a href="developers.html">  Team INSPIRA </a></p>
+            <p><small>Developed By <a href="developers.html" style="text-decoration: underline; color: yellow;">Team INSPIRA</a></small></p></div>
             </div>
         </div>
     </footer>
