--- a/about.html
+++ b/about.html
@@ -359,8 +359,7 @@
             <p>Phone: <a href="tel:+94000000000" class="hover:text-orange-400">+94 (72) 768-8334 (Event Cordinator)</a></p>
             <div class="mt-6 border-t border-gray-700 pt-6">
             <p>&copy; inspira'25. All Rights Reserved.</p>
-            <p>Developed By <a href="developers.html">  Team INSPIRA </a></p>
-            </div>
+            <p><small>Developed By <a href="developers.html" style="text-decoration: underline; color: yellow;">Team INSPIRA</a></small></p></div>
         </div>
     </footer>
     <!-- Interactive Canvas -->
