update org commitie

--- a/about.html
+++ b/about.html
@@ -277,7 +277,7 @@
 
         <section id="speakers" class="py-5">
         <div class="container">
-            <h2 class="text-center section-title">Executive Pannel</h2>            
+            <h2 class="text-center section-title">Organizing committee</h2>            
             <div class="row g-4">
                 <!-- member 1 -->
                 <div class="col-md-6 col-lg-3">
@@ -285,7 +285,7 @@
                         <img src="https://placehold.co/400x300" class="img-fluid">
                         <div class="p-4">
                             <h5>Sarah Johnson</h5>
-                            <p class="text-primary mb-1">President</p>
+                            <p class="text-primary mb-1">Event Cordinator</p>
                             
                             <div class="d-flex">
                                 <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
@@ -302,7 +302,7 @@
                         <img src="https://placehold.co/400x300" class="img-fluid">
                         <div class="p-4">
                             <h5>Michael Rodriguez</h5>
-                            <p class="text-primary mb-1">Secretery</p>
+                            <p class="text-primary mb-1">Technical Head</p>
                             <div class="d-flex">
                                 <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                 <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
@@ -318,7 +318,7 @@
                         <img src="https://placehold.co/400x300" alt="Diverse woman in creative attire presenting data visualization on a screen" class="img-fluid">
                         <div class="p-4">
                             <h5>Priya Patel</h5>
-                            <p class="text-primary mb-1">Treasurer</p>
+                            <p class="text-primary mb-1">Creative Director</p>
                             <div class="d-flex">
                                 <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                 <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
