Move image assets to assets/img and update references
All image and favicon files were relocated from img/ to assets/img/. Updated HTML files to reference the new asset paths. Also updated developer profile information and image in developers.html.

--- a/developers.html
+++ b/developers.html
@@ -16,12 +16,12 @@
         rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
-    <link rel="icon" href="img/favicon/favicon.ico" type="image/x-icon">
-<link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
-<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
-<link rel="android-chrome-icon" sizes="192x192" href="img/favicon/android-chrome-192x192.png">
-<link rel="android-chrome-icon" sizes="512x512" href="img/favicon/android-chrome-512x512.png">
+    <link rel="icon" href="assets/img/favicon/favicon.ico" type="image/x-icon">
+<link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
+<link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
+<link rel="android-chrome-icon" sizes="192x192" href="assets/img/favicon/android-chrome-192x192.png">
+<link rel="android-chrome-icon" sizes="512x512" href="assets/img/favicon/android-chrome-512x512.png">
 <style>
     body {
         font-family: 'Poppins', sans-serif;
@@ -186,15 +186,15 @@
             <!-- Team Member 3-->
             <div class="col-md-3 col-sm-6">
                 <div class="team-card text-center">
-                    <img src="" alt="Alice Brown">
-                    <h5 class="fw-bold">Alice Brown</h5>
-                    <p><b>Frontend Developer</b><br>Business Analyst</p>
+                    <img src="assets/img/developers/1.jpg" alt="KVMSANDEEPA">
+                    <h5 class="fw-bold">Malith Sandeepa</h5>
+                    <p><b>Frontend Developer</b><br>System Administrator</p>
                     <div class="team-icons">
-                        <a href="#"><i class="bi bi-globe"></i></a>
-                        <a href="#"><i class="bi bi-github"></i></a>
-                        <a href="#"><i class="bi bi-linkedin"></i></a>
-                        <a href="#"><i class="bi bi-facebook"></i></a>
-                        <a href="#"><i class="bi bi-envelope"></i></a>
+                        <a href="https://malithsandeepa.42web.io"><i class="bi bi-globe"></i></a>
+                        <a href="https://github.com/KVMSANDEEPA"><i class="bi bi-github"></i></a>
+                        <a href="https://www.linkedin.com/in/malith-sandeepa/"><i class="bi bi-linkedin"></i></a>
+                        <a href="https://www.facebook.com/malith.sandeepa.328017/"><i class="bi bi-facebook"></i></a>
+                        <a href="malithsandeepa1081@gmail.com"><i class="bi bi-envelope"></i></a>
                     </div>
                 </div>
             </div>
