--- a/update.html
+++ b/update.html
@@ -62,7 +62,7 @@
 
             <!-- Logo -->
             <div class="mb-8">
-                 <img src="img/logo2.jpg" alt="Site Logo" class="h-24 w-24 rounded-full object-cover border-4 border-orange-400 p-1">
+                 <img src="assets/img/logo2.jpg" alt="Site Logo" class="h-24 w-24 rounded-full object-cover border-4 border-orange-400 p-1">
             </div>
 
             <!-- Message -->
