--- a/developers.html
+++ b/developers.html
@@ -201,15 +201,15 @@
             <!-- Team Member 4-->
             <div class="col-md-3 col-sm-6">
                 <div class="team-card text-center">
-                    <img src="" alt="Bob Williams">
-                    <h5 class="fw-bold">Bob Williams</h5>
+                    <img src="assets/img/developers/4.jpg" alt="RAndika Subash">
+                    <h5 class="fw-bold">Randika Subash</h5>
                     <p><b>Frontend Developer</b><br>System Administrator</p>
                     <div class="team-icons">
-                        <a href="#"><i class="bi bi-globe"></i></a>
-                        <a href="#"><i class="bi bi-github"></i></a>
-                        <a href="#"><i class="bi bi-linkedin"></i></a>
-                        <a href="#"><i class="bi bi-facebook"></i></a>
-                        <a href="#"><i class="bi bi-envelope"></i></a>
+                        <a href="https://networkchukka.github.io/site/"><i class="bi bi-globe"></i></a>
+                        <a href="https://github.com/networkchukka"><i class="bi bi-github"></i></a>
+                        <a href="https://www.linkedin.com/in/randikasubash"><i class="bi bi-linkedin"></i></a>
+                        <a href="https://www.facebook.com/randikasubash1015"><i class="bi bi-facebook"></i></a>
+                        <a href="mailto:randikaudaynga90@gmail.com"><i class="bi bi-envelope"></i></a>
                     </div>
                 </div>
             </div>
