--- a/developers.html
+++ b/developers.html
@@ -156,15 +156,15 @@
             <!-- Team Member 1-->
             <div class="col-md-3 col-sm-6">
                 <div class="team-card text-center">
-                    <img src="" alt="John Doe">
-                    <h5 class="fw-bold">John Doe</h5>
-                    <p><b>Full Stack Developer</b><br>Quality Assurance<br>System Administrator</p>
+                    <img src="assets/img/developers/1.jpg" alt="Janidu Senarathna">
+                    <h5 class="fw-bold">Janidu Senarathna</h5>
+                    <p><b>Frontend Developer</b><br>System Administrator</p>
                     <div class="team-icons">
                         <a href="#"><i class="bi bi-globe"></i></a>
-                        <a href="#"><i class="bi bi-github"></i></a>
+                        <a href="https://github.com/janidu157"><i class="bi bi-github"></i></a>
                         <a href="#"><i class="bi bi-linkedin"></i></a>
-                        <a href="#"><i class="bi bi-facebook"></i></a>
-                        <a href="#"><i class="bi bi-envelope"></i></a>
+                        <a href="https://www.facebook.com/share/1HUu33UpcL/"><i class="bi bi-facebook"></i></a>
+                        <a href="janidusenarathna157@gmail.com"><i class="bi bi-envelope"></i></a>
                     </div>
                 </div>
             </div>
@@ -186,7 +186,7 @@
             <!-- Team Member 3-->
             <div class="col-md-3 col-sm-6">
                 <div class="team-card text-center">
-                    <img src="assets/img/developers/1.jpg" alt="KVMSANDEEPA">
+                    <img src="assets/img/developers/3.jpg" alt="KVMSANDEEPA">
                     <h5 class="fw-bold">Malith Sandeepa</h5>
                     <p><b>Frontend Developer</b><br>System Administrator</p>
                     <div class="team-icons">
