--- a/developers.html
+++ b/developers.html
@@ -194,7 +194,7 @@
                         <a href="https://github.com/KVMSANDEEPA"><i class="bi bi-github"></i></a>
                         <a href="https://www.linkedin.com/in/malith-sandeepa/"><i class="bi bi-linkedin"></i></a>
                         <a href="https://www.facebook.com/malith.sandeepa.328017/"><i class="bi bi-facebook"></i></a>
-                        <a href="malithsandeepa1081@gmail.com"><i class="bi bi-envelope"></i></a>
+                        <a href="mailto:malithsandeepa1081@gmail.com"><i class="bi bi-envelope"></i></a>
                     </div>
                 </div>
             </div>
@@ -248,11 +248,8 @@
     <footer class="site-footer text-gray-300 py-12">
         <div class="container mx-auto px-6 text-center">
             <h3 class="text-2xl font-bold mb-4 text-white">Contact Us</h3>
-<<<<<<< HEAD
             <p class="mb-2">Organizing Comiitee, INSPIRA'25</p>
-=======
             <p class="mb-2">Organizing Committee,INSPIRA'25</p>
->>>>>>> 0f0c7a178af3339c2dc42a9af67380089777cfb4
             <p class="mb-2">Email: <a href="mailto:info@inspira2025.online" class="hover:text-orange-400">info@inspira2025.online</a>
             </p>
             <p>Phone: <a href="tel:+94000000000" class="hover:text-orange-400">+94 (72) 768-8334 (Event Cordinator)</a></p>
