--- a/developers.html
+++ b/developers.html
@@ -138,7 +138,7 @@
     <header class="site-header">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="index.html" class="flex items-center gap-3">
-                <img src="img/logo2.jpg" class="h-12 w-12 rounded-full object-cover border-2 border-orange-400 p-1">
+                <img src="assets/img/logo2.jpg" class="h-12 w-12 rounded-full object-cover border-2 border-orange-400 p-1">
                 <span class="font-bold text-xl hidden sm:block">INSPIRA 2025</span>
             </a>
             <nav>
