Update developer information and add new team member image

--- a/developers.html
+++ b/developers.html
@@ -138,13 +138,13 @@
     <header class="site-header">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="index.html" class="flex items-center gap-3">
-                <img src="img/logo2.jpg" class="h-12 w-12 rounded-full object-cover border-2 border-orange-400 p-1">
-                <span class="font-bold text-xl hidden sm:block">INSPIRA 2025</span>
+                <img src="assets/img/logo2.jpg" class="h-12 w-12 rounded-full object-cover border-2 border-orange-400 p-1">
+                <span class="font-bold text-xl hidden sm:block" style="color: white;">INSPIRA '25</span>
             </a>
             <nav>
                 <ul class="flex items-center space-x-8">
-                    <li><a href="index.html" class="nav-link font-semibold">Home</a></li>
-                    <li><a href="about.html" class="nav-link font-semibold">About</a></li>
+                    <li><a href="index.html" class="nav-link font-semibold" style="color: white;" >Home</a></li>
+                    <li><a href="about.html" class="nav-link font-semibold" style="color: white;" >About</a></li>
                 </ul>
             </nav>
         </div>
@@ -171,15 +171,15 @@
             <!-- Team Member 2-->
             <div class="col-md-3 col-sm-6">
                 <div class="team-card text-center">
-                    <img src="" alt="Jane Smith">
-                    <h5 class="fw-bold">Jane Smith</h5>
-                    <p><b>Frontend Developer</b><br>Technical Writer</p>
+                    <img src="assets/img/developers/2.jpeg" alt="Jane Smith">
+                    <h5 class="fw-bold">Lahiru Sathsara</h5>
+                    <p><b>Frontend Developer</b><br>System Administrator</p>
                     <div class="team-icons">
-                        <a href="#"><i class="bi bi-globe"></i></a>
-                        <a href="#"><i class="bi bi-github"></i></a>
-                        <a href="#"><i class="bi bi-linkedin"></i></a>
-                        <a href="#"><i class="bi bi-facebook"></i></a>
-                        <a href="#"><i class="bi bi-envelope"></i></a>
+                        <a href="https:propix.work.gd"><i class="bi bi-globe"></i></a>
+                        <a href="https://github.com/propixlk"><i class="bi bi-github"></i></a>
+                        <a href="https://www.linkedin.com/in/lahiru-sathsara"><i class="bi bi-linkedin"></i></a>
+                        <a href="https://www.facebook.com/share/16muPmLM6q/"><i class="bi bi-facebook"></i></a>
+                        <a href="mailto:lwijayamal2@gmail.com"><i class="bi bi-envelope"></i></a>
                     </div>
                 </div>
             </div>
