Fix broken link for Lahiru Sathsara's personal website

--- a/developers.html
+++ b/developers.html
@@ -175,7 +175,7 @@
                     <h5 class="fw-bold">Lahiru Sathsara</h5>
                     <p><b>Frontend Developer</b><br>System Administrator</p>
                     <div class="team-icons">
-                        <a href="https:propix.work.gd"><i class="bi bi-globe"></i></a>
+                        <a href="https://propix.work.gd/"><i class="bi bi-globe"></i></a>
                         <a href="https://github.com/propixlk"><i class="bi bi-github"></i></a>
                         <a href="https://www.linkedin.com/in/lahiru-sathsara"><i class="bi bi-linkedin"></i></a>
                         <a href="https://www.facebook.com/share/16muPmLM6q/"><i class="bi bi-facebook"></i></a>
