change hover coler in dev tab

--- a/developers.html
+++ b/developers.html
@@ -84,7 +84,7 @@
         transition: color 0.2s;
     }
     .team-icons a:hover {
-        color: #F28C1A;
+        color: #ffffff;
     }
     .text-danger {
         font-size: 0.95rem;
