--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
             </h1>
             
             <div class="fade-in-up-5">
-                <p class="mb-4 text-gray-300">Watch Live On</p>
+                <p class="mb-4 text-gray-300">     </p>
                 <div class="flex flex-wrap justify-center items-center gap-4">
                     <!--<a href="update.html" target="_self"
                         class="glow-button flex items-center gap-2 btn-zoom text-white font-bold py-2 px-5 rounded-full">
@@ -333,9 +333,9 @@
         <div class="container mx-auto px-6 text-center">
             <h3 class="text-2xl font-bold mb-4 text-white">Contact Us</h3>
             <p class="mb-2">Organizing Committee, INSPIRA'25</p>
-            <p class="mb-2">Email: <a href="mailto:info@inspira.com" class="hover:text-orange-400">info@inspira.com</a>
+            <p class="mb-2">Email: <a href="mailto:info@inspira.com" class="hover:text-orange-400">info@inspira2025.online</a>
             </p>
-            <p>Phone: <a href="tel:+94000000000" class="hover:text-orange-400">+94 (00) 000-0000</a></p>
+            <p>Phone: <a href="tel:+94000000000" class="hover:text-orange-400">+94 (72) 768-8334</a></p>
             <div class="mt-6 border-t border-gray-700 pt-6">
             <p>&copy; inspira'25. All Rights Reserved.</p>
             <p><small>Developed By <a href="developers.html" style="text-decoration: underline; color: yellow;">Team INSPIRA</a></small></p></div></div>
