Update contact form action URL to use Formcarry

--- a/about.html
+++ b/about.html
@@ -455,7 +455,7 @@
     <section class="contact-section">
         <div class="form-container">
             <h1 class="form-title">Contact Us</h1>
-            <form id="contact-form" action="https://formspree.io/f/xwpolbba" method="POST">
+            <form id="contact-form" action="https://formcarry.com/s/m8m6yiJZGs4" method="POST">
                 <div class="input-group">
                     <label for="name" class="input-label">Your Name:</label>
                     <input type="text" id="name" name="name" class="form-input" placeholder="Enter your full name" required>
