update janidu's dev page

--- a/developers.html
+++ b/developers.html
@@ -160,11 +160,11 @@
                     <h5 class="fw-bold">Janidu Senarathna</h5>
                     <p><b>Frontend Developer</b><br>System Administrator</p>
                     <div class="team-icons">
-                        <a href="#"><i class="bi bi-globe"></i></a>
+                        <!--<a href="#"><i class="bi bi-globe"></i></a> -->
                         <a href="https://github.com/janidu157"><i class="bi bi-github"></i></a>
-                        <a href="#"><i class="bi bi-linkedin"></i></a>
+                        <!--<a href="#"><i class="bi bi-linkedin"></i></a> -->
                         <a href="https://www.facebook.com/share/1HUu33UpcL/"><i class="bi bi-facebook"></i></a>
-                        <a href="janidusenarathna157@gmail.com"><i class="bi bi-envelope"></i></a>
+                        <a href="mailto:janidusenarathna157@gmail.com"><i class="bi bi-envelope"></i></a>
                     </div>
                 </div>
             </div>
