--- a/developers.html
+++ b/developers.html
@@ -251,7 +251,7 @@
             <p class="mb-2">Organizing Committee, INSPIRA'25</p>
             <p class="mb-2">Email: <a href="mailto:info@inspira2025.online" class="hover:text-orange-400">info@inspira2025.online</a>
             </p>
-            <p>Phone: <a href="tel:+94000000000" class="hover:text-orange-400">+94 (72) 768-8334 (Event Cordinator)</a></p>
+            <p>Phone: <a href="tel:+94727688334" class="hover:text-orange-400">+94 (72) 768-8334</a> (Event Cordinator)</p>
             <div class="mt-6 border-t border-gray-700 pt-6">
             <p>&copy; inspira'25. All Rights Reserved.</p>
             <p><small>Developed By <a href="developers.html" style="text-decoration: underline; color: yellow;">Team INSPIRA</a></small></p></div>
