--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             <nav>
                 <ul class="flex items-center space-x-8">
                     <li><a href="index.html" class="nav-link font-semibold">Home</a></li>
-                    <li><a href="about.html" class="nav-link font-semibold">About Us</a></li>
+                    <li><a href="about.html" class="nav-link font-semibold">About</a></li>
                 </ul>
             </nav>
         </div>
@@ -335,7 +335,7 @@
             <p class="mb-2">Organizing Committee, INSPIRA'25</p>
             <p class="mb-2">Email: <a href="mailto:info@inspira.com" class="hover:text-orange-400">info@inspira2025.online</a>
             </p>
-            <p>Phone: <a href="tel:+94000000000" class="hover:text-orange-400">+94 (72) 768-8334</a></p>
+            <p>Phone: <a href="tel:+94727688334" class="hover:text-orange-400">+94 (72) 768-8334</a></p>
             <div class="mt-6 border-t border-gray-700 pt-6">
             <p>&copy; inspira'25. All Rights Reserved.</p>
             <p><small>Developed By <a href="developers.html" style="text-decoration: underline; color: yellow;">Team INSPIRA</a></small></p></div></div>
