--- a/about.html
+++ b/about.html
@@ -353,7 +353,17 @@
             <h1 class="text-center section-title">About The Event</h1>
             <div class="row g-4 align-items-center">
                 <div class="col-lg-6 col-md-12">
-                    <img src="https://placehold.co/800x600" alt="Modern conference center" class="img-fluid rounded shadow-lg">
+                 <iframe
+  src="https://lu.ma/embed/event/evt-ZBuUsFRbOFCzmma/simple"
+  width="800"
+  height="600"
+  frameborder="0"
+  style="border: 1px solid #bfcbda88; border-radius: 4px;"
+  allow="fullscreen; payment"
+  aria-hidden="false"
+  tabindex="0"
+></iframe>
+                    <!-- <img src="https://placehold.co/800x600" alt="Modern conference center" class="img-fluid rounded shadow-lg"> -->
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <h3 class="sub-title">Where Ideas Meet Action</h3>
