--- a/developers.html
+++ b/developers.html
@@ -145,6 +145,7 @@
                 <ul class="flex items-center space-x-8">
                     <li><a href="index.html" class="nav-link font-semibold" style="color: white;" >Home</a></li>
                     <li><a href="about.html" class="nav-link font-semibold" style="color: white;" >About</a></li>
+                    <li><a href="ticket.html" class="nav-link font-semibold" style="color: white;">Get Ticket</a></li>
                 </ul>
             </nav>
         </div>
