--- a/index.html
+++ b/index.html
@@ -256,6 +256,7 @@
                 <ul class="flex items-center space-x-8">
                     <li><a href="index.html" class="nav-link font-semibold">Home</a></li>
                     <li><a href="about.html" class="nav-link font-semibold">About</a></li>
+                    <li><a href="ticket.html" class="nav-link font-semibold">Get Ticket</a></li>
                 </ul>
             </nav>
         </div>
@@ -276,6 +277,11 @@
                 <p>Organized by the English Speech Club 23/24</p>
                 <p>Faculty of Applied Science, Rajarata University of Sri Lanka</p>
             </div>
+            <div><a href="ticket.html" target="_self"
+    class="glow-button flex items-center gap-2 btn-zoom text-white font-bold py-2 px-5 rounded-full">
+    <i class="bi bi-ticket-detailed-fill"></i>
+    Get Your Ticket
+</a></div>
 
             <div id="countdown-container" class="w-full max-w-2xl mt-12 mb-12 fade-in-up-5">
                 <div class="grid grid-cols-2 sm:grid-cols-4 gap-4 text-center">
