--- a/about.html
+++ b/about.html
@@ -323,7 +323,7 @@
                 <ul class="flex items-center space-x-8">
                     <li><a href="index.html" class="nav-link font-semibold">Home</a></li>
                     <li><a href="about.html" class="nav-link font-semibold">About</a></li>
-                    <li><a href="ticket.html" class="nav-link font-semibold text-orange-400">Get Ticket</a></li>
+                    <li><a href="ticket.html" class="nav-link font-semibold">Get Ticket</a></li>
                 </ul>
             </nav>
         </div>
