--- a/index.html
+++ b/index.html
@@ -232,9 +232,22 @@
         }
 
         @media (max-width: 768px) {
-          #page-content {
-            margin-top: 25%; /* or 10% depending on your need */
+            .site-header {
+                margin-top: 2vh;
+            }
+            #page-content {
+                margin-top: 25%; /* or 10% depending on your need */
           }
+
+        }
+
+        /* Ticket Button  */
+        .ticket_btn {
+            margin-top: 2%;
+        }
+
+        #countdown-container {
+            margin: 5vh 0vh;
         }
 
     </style>
@@ -277,11 +290,12 @@
                 <p>Organized by the English Speech Club 23/24</p>
                 <p>Faculty of Applied Science, Rajarata University of Sri Lanka</p>
             </div>
-            <div><a href="ticket.html" target="_self"
-    class="glow-button flex items-center gap-2 btn-zoom text-white font-bold py-2 px-5 rounded-full">
-    <i class="bi bi-ticket-detailed-fill"></i>
-    Get Your Ticket
-</a></div>
+            <div class="ticket_btn">
+                <a href="ticket.html" target="_self" class="glow-button flex items-center gap-2 btn-zoom text-white font-bold py-2 px-5 rounded-full">
+                <i class="bi bi-ticket-detailed-fill"></i>
+                <p>Get Your Ticket</p>
+                </a>
+            </div>
 
             <div id="countdown-container" class="w-full max-w-2xl mt-12 mb-12 fade-in-up-5">
                 <div class="grid grid-cols-2 sm:grid-cols-4 gap-4 text-center">
