add a ui developer in developer page and add image

--- a/developers.html
+++ b/developers.html
@@ -214,21 +214,21 @@
                     </div>
                 </div>
             </div>
-            <!--<div class="col-md-3 col-sm-6">
+            <div class="col-md-3 col-sm-6">
                 <div class="team-card text-center">
-                    <img src="" alt="John Doe">
-                    <h5 class="fw-bold">John Doe</h5>
-                    <p><b>Full Stack Developer</b><br>Quality Assurance<br>System Administrator</p>
+                    <img src="assets/img/developers/DilminiAnjalika.jpg" alt="">
+                    <h5 class="fw-bold">Dilmini Anjalika</h5>
+                    <p><b>UI Designer</b><br>Quality Assurance</p>
                     <div class="team-icons">
-                        <a href="#"><i class="bi bi-globe"></i></a>
-                        <a href="#"><i class="bi bi-github"></i></a>
-                        <a href="#"><i class="bi bi-linkedin"></i></a>
-                        <a href="#"><i class="bi bi-facebook"></i></a>
-                        <a href="#"><i class="bi bi-envelope"></i></a>
+                        <!-- <a href="#"><i class="bi bi-globe"></i></a> -->
+                        <a href="https://github.com/Dil-2"><i class="bi bi-github"></i></a>
+                        <a href="www.linkedin.com/in/dilmini-anjalika-089305364"><i class="bi bi-linkedin"></i></a>
+                        <!-- <a href="#"><i class="bi bi-facebook"></i></a> -->
+                        <a href="Mailto:dilinianjalika076@gmail.com"><i class="bi bi-envelope"></i></a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 col-sm-6">
+          <!--   <div class="col-md-3 col-sm-6">
                 <div class="team-card text-center">
                     <img src="" alt="John Doe">
                     <h5 class="fw-bold">John Doe</h5>
