--- a/about.html
+++ b/about.html
@@ -312,7 +312,7 @@
 
 .member-section .slider-wrapper {
     overflow: hidden;
-    margin: 0 60px 50px;
+   margin: 0px 25px 30px;
 }
 
 .member-section .member {
